# Scan-SLAM

./: README.md  compose.sh
docker_me575/: Dockerfile
docker_me575/startup/: entrypoint.sh
docker_scan_slam/: docker-compose.yaml
docker_scan_slam/startup/: entrypoint.sh
docker_scan_slam/vscode/: c_cpp_properties.json
results/occupancy_grid/: occupancy_grid_analysis.py  occupancy_grid_truth.npy
results/test1/: test_0.mcap
results/test2/: metadata.yaml  test2_0.mcap
results/test3/: metadata.yaml  test3_0.mcap
results/test4/: metadata.yaml  test4_0.mcap
results/test5/: test5_0.mcap
results/test6/: metadata.yaml
results/timing/timing_results_dense/: frontend_times.npy  loop_closure_times.npy
results/timing/timing_results_sparse/: backend_graph_sizes.npy  backend_times.npy  frontend_times.npy  loop_closure_iterations.npy
results/timing/timing_results_sparse_full/: backend_graph_sizes.npy  frontend_times.npy  loop_closure_times.npy
results/trajectories/: est_trajectory.npy  truth_trajectory.npy
src/scan_slam/: CMakeLists.txt  package.xml
src/scan_slam/config/: slam_config.yaml
src/scan_slam/include/scan_slam/: correlative_matcher_lookup_table.hpp  correlative_scan_matcher.hpp  scan_matcher_interface.hpp  slam_backend.hpp  slam_frontend.hpp  slam_types.hpp
src/scan_slam/launch/: scan_slam.launch.py
src/scan_slam/src/: correlative_matcher_lookup_table.cpp  correlative_scan_matcher.cpp  frontend_main.cpp  slam_backend.cpp  slam_frontend.cpp
src/scan_slam_msgs/: CMakeLists.txt  package.xml
src/scan_slam_results/: test_plan.md
src/scan_slam_sim/: package.xml  setup.cfg  setup.py
src/scan_slam_viz/: package.xml  setup.cfg  setup.py
src/test_slam/: package.xml  setup.cfg  setup.py
(+41 files in other folders)
